examples/test/testpolicy16912.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16912
  namespace: namespace223
spec:
  podSelector:
    matchLabels:
      key3: value2
      key41: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value38
          key23: value33
      podSelector:
        matchLabels:
          key49: value49
          key19: value36
